# ESPIDF

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  idf_component.yml  main.c  nvs_demo.c
main/Guider_ui/custom/: custom.c  custom.h
main/device/: Digital_key.c  device_lcd.c  weather.c
main/device/include/: Digital_key.h  device_lcd.h  event_bits.h  weather.h
main/lv_ui/: lv_ui.c
main/lv_ui/include/: lv_ui.h
main/setup/: setup_gpio.c  setup_nvs.c  setup_rtc.c  setup_spi.c  setup_uart.c  setup_wifi.c
main/setup/include/: setup_gpio.h  setup_nvs.h  setup_rtc.h  setup_spi.h  setup_uart.h  setup_wifi.h
main/soft_drv/: soft_drv_lvgl_port.c
main/soft_drv/include/: soft_drv_lvgl_port.h
